// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Example component works properly with translations 1`] = `
<div>
  Hallo & Welt
  <br />
  Hey 
  dude
  , du willst 
  <a
    onClick={[Function]}
  >
    mich anklicken
  </a>
   und weißt das auch!
  <br />
  Tschüss Welt
  <br />
  Tschüss Welt
  <br />
  Etwas &lt;HTML&gt; & Entities: → &
  <br />
  <span
    title="\\"<strong>Ratten.</strong>\\""
  >
    Hover mich
  </span>
  <br />
  &lt;HTML&gt; wird unescaped extracted
  <br />
  xxx foo bar
  1
  2
   muh
  <hr />
  Du hast 
  1
   Ratte.
  <br />
  Du hast 
  0
   Ratten.
  <br />
  Du hast 
  1
   Ratte.
  <br />
  Du hast 
  2
   Ratten.
  <br />
  Junge Katzen:
   
  Kätzchen
  <br />
  Junge Hunde:
   
  Welpe
  <br />
  Das ist ein hervorgehobener dynamischer Wert: 
  <em>
    1000
  </em>
  Das ist ein hervorgehobener übersetzter Wert: 
  <em>
    hallo
  </em>
  Dieser Parameter verwendet String Literals: 
  <em>
    Hallo Welt
  </em>
</div>
`;

exports[`Example component works properly without translations 1`] = `
<div>
  Hello & World
  <br />
  Hey 
  dude
  , you want to
   
  <a
    onClick={[Function]}
  >
    click me
  </a>
   
  and you know it!
  <br />
  Bye World
  <br />
  Bye World
  <br />
  Some &lt;HTML&gt; & entities: → &
  <br />
  <span
    title="\\"<strong>Rats.</strong>\\""
  >
    Hover me
  </span>
  <br />
  &lt;HTML&gt; is unescaped when extracted
  <br />
  xxx foo bar
  1
  2
   
  moo
  <hr />
  You have 
  1
   rat.
  <br />
  You have 
  0
   rats.
  <br />
  You have 
  1
   rat.
  <br />
  You have 
  2
   rats.
  <br />
  Little cats:
   
  offspring
  <br />
  Little dogs:
   
  offspring
  <br />
  This is an emphasized dynamic value:
   
  <em>
    1000
  </em>
  This is an emphasized translated value:
   
  <em>
    hello
  </em>
  This param is using string literals:
   
  <em>
    hello world
  </em>
</div>
`;

exports[`Example strings work properly with translations 1`] = `
Object {
  "bigCat1": "KATZE",
  "bigCat2": "KATZEN",
  "cat1": "Katze",
  "cat2": "Katzen",
  "formattedPlural1": "ein bar",
  "formattedPlural2": "viele bar",
  "formattedPluralCtx1": "ein baz",
  "formattedPluralCtx2": "viele baz",
  "meow": "Kätzchen",
  "mixedCase": "gemischt: bar",
  "oneParam": "Foo: bar",
  "spaceInvader": "Space-Invader",
  "twoParams": "Foo: bar",
  "ugly": "Du bist hässlich!",
  "v1": "\\"<strong>Ratten.</strong>\\"",
  "v2": "\\"<strong>Ratten.</strong>\\"",
  "v3": "FooBar",
  "v4": "FooBar",
  "weird": "Foo stuff Bar world123 XXX",
}
`;

exports[`Example strings work properly without translations 1`] = `
Object {
  "bigCat1": "cat",
  "bigCat2": "cats",
  "cat1": "cat",
  "cat2": "cats",
  "formattedPlural1": "one bar",
  "formattedPlural2": "many bar",
  "formattedPluralCtx1": "one baz",
  "formattedPluralCtx2": "many baz",
  "meow": "offspring",
  "mixedCase": "mixed: bar",
  "oneParam": "foo: bar",
  "spaceInvader": "space invader",
  "twoParams": "foo: bar",
  "ugly": "You are ugly!",
  "v1": "\\"<strong>Rats.</strong>\\"",
  "v2": "\\"<strong>Rats.</strong>\\"",
  "v3": "foobar",
  "v4": "foobar",
  "weird": "foo stuff bar world123 xxx",
}
`;

exports[`Prop updates are working with translation 1`] = `
<div>
  translated-Hello, 
  user
  <br />
  plural-You have 
  0
   new messages.
</div>
`;

exports[`Prop updates are working with translation 2`] = `
<div>
  translated-Hello, 
  world
  <br />
  plural-You have 
  0
   new messages.
</div>
`;

exports[`Prop updates are working with translation 3`] = `
<div>
  translated-Hello, 
  important dude
  <br />
  singular-You have a new message.
</div>
`;

exports[`Prop updates are working without translation 1`] = `
<div>
  Hello, 
  user
  <br />
  You have 
  0
   new messages.
</div>
`;

exports[`Prop updates are working without translation 2`] = `
<div>
  Hello, 
  world
  <br />
  You have 
  0
   new messages.
</div>
`;

exports[`Prop updates are working without translation 3`] = `
<div>
  Hello, 
  important dude
  <br />
  You have a new message.
</div>
`;
